src/examples/type_errors/AnnotateUintKey.sol
pragma solidity ^0.5.0;

contract AnnotateUintKey {

	mapping (uint!x => uint@x) m;
}
